--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "https://taylorwebk@bitbucket.org/taylorwebk/form.git",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --hot --mode=development --progress --colors --config ./webpack.config.js",
+    "start": "webpack-dev-server --hot --mode=development --progress --colors --config ./webpack.config.js --host 192.168.0.15",
     "build": "webpack --mode=production --config ./webpack.config.prod.js"
   },
   "devDependencies": {
@@ -39,7 +39,9 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
+    "material-ui-chip-input": "^1.0.0-beta.16",
     "notistack": "^0.8.2",
+    "outstated": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.8.4",
