--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "https://taylorwebk@bitbucket.org/taylorwebk/form.git",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --hot --mode=development --progress --colors --config ./webpack.config.js --host 192.168.0.15",
+    "start": "webpack-dev-server --hot --mode=development --progress --colors --config ./webpack.config.js",
     "build": "webpack --mode=production --config ./webpack.config.prod.js"
   },
   "devDependencies": {
