--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
     "es6": true
   },
   "rules": {
-    "linebreak-style": ["error", "windows"],
+    "linebreak-style": ["error", "unix"],
     "import/extensions": "off",
     "import/no-unresolved": "off",
     "jsx-a11y/anchor-is-valid": [ "error", {
