--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@material-ui/icons": "^4.1.0",
     "axios": "^0.19.0",
     "material-ui-chip-input": "^1.0.0-beta.16",
+    "moment": "^2.24.0",
     "notistack": "^0.8.6",
     "outstated": "^2.1.0",
     "react": "^16.8.6",
