--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@material-ui/core": "^4.1.0",
     "@material-ui/icons": "^4.1.0",
+    "@nivo/pie": "^0.59.1",
     "axios": "^0.19.0",
     "material-ui-chip-input": "^1.0.0-beta.16",
     "moment": "^2.24.0",
