--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hot-loader/react-dom": "^16.8.6",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "compression-webpack-plugin": "^3.0.0",
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
