--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@material-ui/core": "^4.1.0",
     "@material-ui/icons": "^4.1.0",
+    "@nivo/bar": "^0.59.2",
     "@nivo/pie": "^0.59.1",
     "axios": "^0.19.0",
     "material-ui-chip-input": "^1.0.0-beta.16",
