--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@material-ui/icons": "^4.1.0",
     "@nivo/bar": "^0.59.2",
     "@nivo/pie": "^0.59.1",
+    "@nivo/radar": "^0.59.1",
     "axios": "^0.19.0",
     "material-ui-chip-input": "^1.0.0-beta.16",
     "moment": "^2.24.0",
